@@ -8,6 +8,8 @@
  - UI:  Planet menu now sorts planets above space stations.
  - API: map/get_stars is no longer supported. use map/get_star_map instead
  - API: map/get_star_map changed to show alliance influence, not station
+ - Mod: API added alliance_id to empire get_status
+ - Mod: API added method to embassy to get excavators at a star
  - Mod: UI Planet menu now sorts planets above space stations.
  - Mod: UI Link to Alliance Influence in top menu (new map daily)
  - Mod: API map/get_stars is no longer supported. use map/get_star_map instead
